--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <hr size="4">
     <h3>Education</h3>
     <ul>
-        <li>S.N Vidya Bhavan</li>
-        <li>FISAT</li>
+        <li>Sherman Oats</li>
+        <li>SHIELD</li>
         <li>Stanford</li>
     </ul>
     <hr size="4">
